tests/fixtures/invalid/struct_assignment_type_mismatch.c
struct Point {
    int x;
};

struct Pair {
    int x;
};

int main() {
    struct Point p;
    struct Pair q;
    p = q;
    return 0;
}
